--- a/storefront-child/build_assets/scss/blocks/_checkout.scss
+++ b/storefront-child/build_assets/scss/blocks/_checkout.scss
@@ -19,6 +19,163 @@
         display: block!important;
     }
 }
+.woocommerce-checkout-review-order-table thead {
+    .product-name, .product-total {
+        display: none;
+    }
+}
+#payment .payment_methods>.wc_payment_method>label {
+    background-color: white;
+    margin: 0;
+}
+#payment .payment_methods li input[type=radio]:first-child:checked+label:before {
+    color: $seaFoam !important;
+}
+#payment .payment_methods>.wc_payment_method>label {
+    font-family: $montserrat;
+    font-size: 16px;
+    padding: 0 !important;
+}
+#stripe-payment-data p {
+    display: block !important;
+    font-size: 14px;
+    font-weight: 300;
+    font-family: $montserrat;
+    color: black;
+}
+.checkout.woocommerce-checkout label {
+    color: #000;
+    font-size: 16px !important;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    font-family: $montserrat !important;
+    margin-bottom: 16px;
+}
+#payment .payment_methods > li .payment_box {
+    background-color: white !important;
+}
+#payment .payment_methods > li:not(.woocommerce-notice) {
+    background-color: white !important;
+}
+.payment_method_stripe {
+    padding: 16px 16px 16px 0 !important;
+}
+h3.custom-payment-heading {
+    width: 100%;
+    margin-top: 46px;
+    font-size: 22px;
+    font-weight: 300;
+    margin-bottom: 0;
+}
+p.custom-payment-infos {
+    width: 100%;
+    margin-top: 32px;
+    font-size: 16px;
+    font-weight: 300;
+    margin-bottom: 16px;
+}
+.cart_item .variation {
+    dt, dd {
+        display: none;
+    }
+    .variation-Extras {
+        display: block;
+    }
+    dt.variation-Extras {
+        display: none;
+    }
+}
+table.woocommerce-checkout-review-order-table {
+    width: 450px;
+}
+table.woocommerce-checkout-review-order-table .product-name {
+    padding: 24px 0 24px 32px;
+    font-family: $montserrat;
+    font-size: 16px;
+    font-weight: 400;
+    color: black;
+    width: 70% !important;
+    background-color: $mercury !important;
+    .product-quantity {
+        font-size: 16px;
+        font-weight: 400;
+        color: black;
+    }
+}
+.edit-basket-container {
+    width: 100%;
+    background-color: $mercury;
+    padding: 0 32px 32px 32px;
+    display: flex;
+    justify-content: center;
+    width: 450px;
+    border-radius: 0 0 20px 20px;
+}
+table.woocommerce-checkout-review-order-table .product-total {
+    padding: 24px 32px 24px 32px;
+    font-family: $montserrat;
+    font-size: 16px;
+    font-weight: 400;
+    color: black;
+    background-color: $mercury !important;
+} 
+tfoot .order-total {
+    th {
+        padding: 10px 32px 24px 32px;
+        font-family: $montserrat;
+        font-size: 16px;
+        font-weight: 400;
+        color: black;
+    }
+    td {
+        padding: 10px 32px 24px 32px;
+        font-family: $montserrat;
+        font-size: 16px;
+        font-weight: 400;
+        color: black;
+        .woocommerce-Price-amount {
+            font-family: $montserrat;
+            font-size: 16px;
+            font-weight: 400;
+            color: black;
+        }
+    }
+}
+tfoot {
+    position: relative;
+    &::before {
+        content: '';
+        display: block;
+        position: absolute;
+        width: calc(100% - 64px);
+        height: 1px;
+        left: 32px;
+        background-color: black;
+    }
+}
+tfoot .cart-subtotal {
+    th {
+        padding: 24px 0 10px 32px;
+        font-family: $montserrat;
+        font-size: 16px;
+        font-weight: 400;
+        color: black;
+    }
+    td {
+        padding: 24px 0 10px 32px;
+        font-family: $montserrat;
+        font-size: 16px;
+        font-weight: 400;
+        color: black;
+    }
+}
+.woocommerce-info {
+    display: none !important;
+}
+.entry-header {
+    display: none;
+}
 .coupon button{
     display: flex;
     width: auto;
@@ -57,6 +214,21 @@
         display: none !important; 
     }
 }
+.heading-checkout-review {
+    width: 450px;
+    float: right;
+    margin-right: 0;
+    clear: right;
+    background-color: $mercury;
+    border-radius: 20px 20px 0 0;
+    padding: 32px 0 0 32px;
+    margin-bottom: 0;
+    font-size: 18px;
+    font-weight: 500;
+}
+#order_review_heading {
+    display: none !important;
+}
 .cart-empty.woocommerce-info{
     max-width: 1400px;
     margin: 0 auto;
@@ -82,6 +254,9 @@
 .return-to-shop{
     text-align: center;
 }
+#order_review .shop_table {
+    margin-bottom: 0 !important;
+}
 .hentry .entry-content a.button{
     border-radius: 10px;
     background: var(--Sea-Foam, #70B095);
@@ -96,10 +271,15 @@
     letter-spacing: -0.32px;
 }
 .checkout.woocommerce-checkout{
-    max-width: 1489px;
+    max-width: 1400px;
+    width: 100%;
     margin: 0 auto;
+    padding: 0 40px;
     #order_review {
-        border-radius: 20px;
+        // border-radius: 20px;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
         overflow: hidden;
         button{
             border-radius: 10px;
@@ -109,6 +289,7 @@
             color: rgba(0, 0, 0, 0.80);
             font-family: Montserrat;
             font-style: normal;
+            display: flex;
         }
     }
     .form-row{
@@ -182,4 +363,57 @@
     flex-shrink: 0;
     border-radius: 10px;
     background: var(--Sea-Foam, #70B095);
+}
+
+.checkout-header {
+    max-width: 1400px;
+    width: 100%;
+    margin: 0 auto;
+    padding: 0 40px;
+    margin-bottom: 46px;
+
+    h1 {
+        margin-top: 72px;
+        margin-bottom: 32px;
+        font-size: 54px;
+        font-weight: 300;
+    }
+
+    &__options {
+        display: flex;
+        justify-content: center;
+        p {
+            width: fit-content;
+            padding: 6px;
+            border-radius: 8px;
+            border: 2px solid $mercury;
+            margin-right: 22px;
+            position: relative;
+            font-size: 10px;
+            font-weight: 400;
+            color: black;
+            cursor: pointer;
+
+            &:hover {
+                background-color: $mercury;
+            }
+
+            &:last-child {
+                margin-right: 0;
+                &::after {
+                    display: none;
+                }
+            }
+
+            &::after {
+                content: url("data:image/svg+xml,%3Csvg width='7' height='8' viewBox='0 0 7 8' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1 7L6.10557 4.44721C6.4741 4.26295 6.4741 3.73705 6.10557 3.55279L1 1' stroke='%23D9E7E1' stroke-linecap='round'/%3E%3C/svg%3E");
+                display: block;
+                position: absolute;
+                width: 6px;
+                height: 6px;
+                right: -17px;
+                bottom: 20px;
+            }
+        }
+    }
 }
