--- a/storefront-child/build_assets/scss/blocks/_checkout.scss
+++ b/storefront-child/build_assets/scss/blocks/_checkout.scss
@@ -1,13 +1,13 @@
 .woocommerce-checkout-review-order{
     // background-color: #D9E7E1 !important; 
     table:not( .has-background ) th {
-        background-color: #D9E7E1;
+        background-color: $mercury !important;
     }
     table:not( .has-background ) tbody td {
-        background-color: #D9E7E1;
+        background-color: $mercury !important;
     }
     tr{
-        background-color: #D9E7E1;
+        background-color: $mercury !important;
     }
     // #payment .payment_methods > li:not(.woocommerce-notice) {
     //     background-color: #D9E7E1;
@@ -36,6 +36,21 @@
     font-size: 16px;
     padding: 0 !important;
 }
+li.select2-results__option.select2-results__option--highlighted {
+    background-color: $seaFoam !important;
+}
+.select2-results__option {
+    font-size: 14px !important;
+    font-family: $montserrat !important;
+    color: black !important;
+}
+.select2-container--default .select2-search--dropdown .select2-search__field {
+    border: 1px solid $mercury;
+}
+.select2-dropdown {
+    border-radius: 10px;
+    border: 2px solid $mercury !important;
+}
 #stripe-payment-data p {
     display: block !important;
     font-size: 14px;
@@ -52,11 +67,208 @@
     font-family: $montserrat !important;
     margin-bottom: 16px;
 }
+.wc-stripe-elements-field {
+    border: 2px solid $mercury !important;
+    padding: 10px !important;
+    background-color: white;
+    border-radius: 10px;
+    color: black;
+}
+#payment .place-order {
+    padding: 0 !important;
+}
+.woocommerce-privacy-policy-text p {
+    display: block !important;
+}
+.woocommerce-billing-fields__field-wrapper {
+    margin-top: 40px;
+}
+p#billing_first_name_field, p#billing_last_name_field {
+    width: 100%;
+}
+#payment .place-order {
+    background-color: white !important;
+    margin-top: 0 !important;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.checkout.woocommerce-checkout .select2-selection {
+    border-radius: 10px;
+}
+textarea#order_comments {
+    height: 200px;
+}
+#customer_details {
+    @media (max-width: 1175px) {
+        width: calc(50% - 20px);
+        margin-right: 40px;
+    }
+    @media (max-width: 900px) {
+        width: calc(60% - 20px);
+        margin-right: 40px;
+    }
+    @media (max-width: 769px) {
+        width: 100%;
+        margin-right: 0;
+        margin-bottom: 80px;
+    }
+    
+}
 #payment .payment_methods > li .payment_box {
     background-color: white !important;
 }
 #payment .payment_methods > li:not(.woocommerce-notice) {
     background-color: white !important;
+}
+#payment .payment_methods li .payment_box fieldset .form-row input[type=checkbox] {
+    display: none;
+}
+.checkout.woocommerce-checkout #order_review button {
+    width: 35%;
+    font-size: 16px;
+    font-weight: 400;
+    font-family: $montserrat !important;
+    background-color: $seaFoam !important;
+    margin-top: 32px;
+    @media (max-width: 900px) {
+        width: 150px;
+    }
+}
+.ui-datepicker-month {
+    font-size: 18px;
+    font-family: $montserrat !important;
+    font-weight: 400 !important;
+    color: black !important;
+}
+.ui-datepicker-year {
+    font-size: 18px;
+    font-family: $montserrat !important;
+    font-weight: 300 !important;
+    color: black !important;
+}
+.ui-datepicker .ui-datepicker-title {
+    margin: 0;
+    padding: 18px 0;
+}
+.ui-datepicker-title {
+    position: relative;
+    &:after {
+        content: '';
+        position: absolute;
+        display: block;
+        height: 1px;
+        width: calc(100% - 20px);
+        left: 10px;
+        top: 38px;
+        background-color: $dark-accent;
+    }
+}
+.ui-datepicker-prev, .ui-datepicker-next {
+    z-index: 10;
+}
+td.available-deliveries.ui-datepicker-current-day a {
+    border: 2px solid $seaFoam !important;
+}
+td.available-deliveries.ui-datepicker-today {
+    border: 2px solid $mercury !important;
+    background-color: white !important;
+}
+td.available-deliveries, td.available-deliveries a {
+    background-color: initial !important;
+    font-size: 16px !important;
+    font-weight: 400 !important;
+    font-family: $montserrat !important;
+    border: 2px solid transparent !important;
+}
+a.ui-state-default {
+    background-color: initial !important;
+}
+.ui-datepicker {
+    box-shadow: none !important;
+    border: none !important;
+    width: fit-content !important;
+}
+table:not( .has-background ) th {
+    background-color: white !important;
+}
+.ui-datepicker td {
+    padding: 5px !important;
+    @media (max-width: 390px) {
+        padding: 1px !important; 
+    }
+}
+.ui-datepicker .ui-datepicker-buttonpane {
+    display: none !important;
+}
+.ui-datepicker-calendar span {
+    font-family: $montserrat !important;
+    font-size: 16px !important;
+    font-weight: 600 !important;
+}
+.ui-datepicker td.ui-datepicker-today {
+    background-color: white !important;
+}
+.ui-datepicker td .ui-state-default {
+    border-radius: 10px !important;
+}
+.ui-widget-header a {
+    color: $seaFoam !important;
+}
+.woocommerce-privacy-policy-text p {
+    font-size: 14px !important;
+    font-weight: 300 !important;
+    font-family: $montserrat;
+    color: black;
+}
+.ui-datepicker td.ui-datepicker-today span.ui-state-default {
+    background-color: white !important;
+    border: 2px solid $mercury !important;
+    color: $black !important;
+    font-weight: 400 !important;
+}
+.ui-state-default, .ui-widget-content .ui-state-default {
+    background: initial !important;
+}
+.ui-state-disabled, .ui-widget-content .ui-state-disabled {
+    opacity: 1 !important;
+}
+.ui-datepicker td.ui-state-disabled .ui-state-default {
+    color: $gray !important;
+    opacity: 1 !important;
+    background-color: $light-gray !important;
+    font-weight: 400 !important;
+}
+div#orddd_datepicker_0 {
+    margin: 50px 0 50px 0;
+}
+// .select2-container {
+//     display: initial !important;
+// }
+.ElementsApp .InputElement::placeholder {
+    color: $mercury !important;
+}
+.woocommerce-billing-fields h3 {
+    margin-bottom: 32px;
+}
+#payment .payment_methods li .payment_box fieldset {
+    background-color: white !important;
+    padding: 88px 0 0 !important;
+    @media (max-width: 1176px) {
+        padding: 11px 0 0 !important;
+    }
+    @media (max-width: 1028px) {
+        padding: 80px 0 0 !important;
+    }
+    @media (max-width: 900px) {
+        padding: 64px 0 0!important;
+    }
+}
+.woocommerce-SavedPaymentMethods-saveNew label {
+    color: black;
+    font-size: 14px !important;
+    font-weight: 400 !important;
 }
 .payment_method_stripe {
     padding: 16px 16px 16px 0 !important;
@@ -67,6 +279,9 @@ h3.custom-payment-heading {
     font-size: 22px;
     font-weight: 300;
     margin-bottom: 0;
+    @media (max-width: 769px) {
+        margin-top: 80px;
+    }
 }
 p.custom-payment-infos {
     width: 100%;
@@ -88,6 +303,9 @@ p.custom-payment-infos {
 }
 table.woocommerce-checkout-review-order-table {
     width: 450px;
+    @media (max-width: 1175px) {
+        width: 100%;
+    }
 }
 table.woocommerce-checkout-review-order-table .product-name {
     padding: 24px 0 24px 32px;
@@ -97,10 +315,19 @@ table.woocommerce-checkout-review-order-table .product-name {
     color: black;
     width: 70% !important;
     background-color: $mercury !important;
+    @media (max-width: 900px) {
+        padding: 24px 0 24px 18px;
+        font-size: 14px;
+    }
     .product-quantity {
+        padding: 24px 0 24px 32px;
         font-size: 16px;
         font-weight: 400;
         color: black;
+        @media (max-width: 900px) {
+            padding: 24px 0 24px 18px;
+            font-size: 14px;
+        }
     }
 }
 .edit-basket-container {
@@ -111,6 +338,14 @@ table.woocommerce-checkout-review-order-table .product-name {
     justify-content: center;
     width: 450px;
     border-radius: 0 0 20px 20px;
+    @media (max-width: 1175px) {
+        width: 100%;
+    }
+}
+.col2-set {
+    @media (max-width: 769px) {
+       float: initial !important; 
+    }
 }
 table.woocommerce-checkout-review-order-table .product-total {
     padding: 24px 32px 24px 32px;
@@ -119,7 +354,23 @@ table.woocommerce-checkout-review-order-table .product-total {
     font-weight: 400;
     color: black;
     background-color: $mercury !important;
-} 
+    @media (max-width: 900px) {
+        padding: 24px 18px 24px 18px;
+        font-size: 14px;
+    }
+}
+.checkout.woocommerce-checkout #order_review {
+    width: 450px;
+    @media (max-width: 1175px) {
+        width: calc(50% - 20px);
+    }
+    @media (max-width: 900px) {
+        width: calc(40% - 20px);
+    }
+    @media (max-width: 769px) {
+        width: 100%;
+    }
+}
 tfoot .order-total {
     th {
         padding: 10px 32px 24px 32px;
@@ -127,6 +378,10 @@ tfoot .order-total {
         font-size: 16px;
         font-weight: 400;
         color: black;
+        @media (max-width: 900px) {
+            font-size: 14px;
+            padding: 10px 18px 24px 18px; 
+        }
     }
     td {
         padding: 10px 32px 24px 32px;
@@ -134,24 +389,19 @@ tfoot .order-total {
         font-size: 16px;
         font-weight: 400;
         color: black;
+        @media (max-width: 900px) {
+            font-size: 14px;
+            padding: 10px 18px 24px 18px; 
+        }
         .woocommerce-Price-amount {
             font-family: $montserrat;
             font-size: 16px;
             font-weight: 400;
             color: black;
+            @media (max-width: 900px) {
+                font-size: 14px;
+            }
         }
-    }
-}
-tfoot {
-    position: relative;
-    &::before {
-        content: '';
-        display: block;
-        position: absolute;
-        width: calc(100% - 64px);
-        height: 1px;
-        left: 32px;
-        background-color: black;
     }
 }
 tfoot .cart-subtotal {
@@ -161,6 +411,10 @@ tfoot .cart-subtotal {
         font-size: 16px;
         font-weight: 400;
         color: black;
+        @media (max-width: 900px) {
+            padding: 24px 0 10px 18px; 
+            font-size: 14px;
+        }
     }
     td {
         padding: 24px 0 10px 32px;
@@ -168,6 +422,10 @@ tfoot .cart-subtotal {
         font-size: 16px;
         font-weight: 400;
         color: black;
+        @media (max-width: 900px) {
+            padding: 24px 0 10px 18px;
+            font-size: 14px;
+        }
     }
 }
 .woocommerce-info {
@@ -201,6 +459,18 @@ tfoot .cart-subtotal {
     max-width: 1489px;
     margin: 0 auto;
 }
+.form-row-first {
+    @media (max-width: 900px) {
+        float: initial !important;
+        width: 100% !important;
+    }
+}
+.form-row-last {
+    @media (max-width: 900px) {
+        float: initial !important;
+        width: 100% !important;
+    }
+}
 .woocommerce-message{
     width: 100%;
     height: 48px;
@@ -225,6 +495,17 @@ tfoot .cart-subtotal {
     margin-bottom: 0;
     font-size: 18px;
     font-weight: 500;
+    @media (max-width: 1175px) {
+        width: calc(50% - 20px);
+    }
+    @media (max-width: 900px) {
+        padding: 18px 0 0 18px;
+        width: calc(40% - 20px);
+    }
+    @media (max-width: 769px) {
+        width: 100%;
+        float: initial !important;
+    }
 }
 #order_review_heading {
     display: none !important;
@@ -257,6 +538,20 @@ tfoot .cart-subtotal {
 #order_review .shop_table {
     margin-bottom: 0 !important;
 }
+.ui-datepicker-inline.ui-datepicker.ui-widget.ui-widget-content.ui-helper-clearfix.ui-corner-all {
+    @media (max-width: 450px) {
+        width: 380px !important;
+        position: relative;
+        left: -10px;
+        margin: 0 auto;
+    }
+    @media (max-width: 390px) {
+        left: -15px;
+    }
+    @media (max-width: 380px) {
+        left: -23px;
+    }
+}
 .hentry .entry-content a.button{
     border-radius: 10px;
     background: var(--Sea-Foam, #70B095);
@@ -270,11 +565,25 @@ tfoot .cart-subtotal {
     line-height: normal;
     letter-spacing: -0.32px;
 }
+// .select2-dropdown.select2-dropdown--below {
+//     width: max-content !important;
+// }
 .checkout.woocommerce-checkout{
     max-width: 1400px;
     width: 100%;
     margin: 0 auto;
     padding: 0 40px;
+
+    @media (max-width: 1020px) {
+        padding: 0 32px;
+    }
+    @media (max-width: 769px) {
+        padding-bottom: 50px;
+    }
+    @media (max-width: 450px) {
+        padding: 0 20px;
+    }
+    
     #order_review {
         // border-radius: 20px;
         display: flex;
@@ -371,12 +680,23 @@ tfoot .cart-subtotal {
     margin: 0 auto;
     padding: 0 40px;
     margin-bottom: 46px;
+    @media (max-width: 1024px) {
+        padding: 0 32px;
+    }
+    @media (max-width: 450px) {
+        padding: 0 20px;
+    }
 
     h1 {
         margin-top: 72px;
         margin-bottom: 32px;
         font-size: 54px;
         font-weight: 300;
+        @media (max-width: 1024px) {
+            font-size: 32px;
+            margin-top: 56px;
+            margin-bottom: 18px;
+        }
     }
 
     &__options {
