--- a/storefront-child/build_assets/scss/blocks/_breadcrumb.scss
+++ b/storefront-child/build_assets/scss/blocks/_breadcrumb.scss
@@ -64,6 +64,7 @@
             font-family: $montserrat;
             font-size: 16px;
             font-weight: 400;
+            text-transform: capitalize;
         }
     }
 }
