--- a/storefront-child/build_assets/scss/blocks/_global-featured-products.scss
+++ b/storefront-child/build_assets/scss/blocks/_global-featured-products.scss
@@ -2,14 +2,52 @@
     max-width: 1328px;
     width: 95%;
     margin: 0 auto;
-    margin-top: 96px;
+    padding: 48px 0;
     position: relative;
+    @media (max-width: 1260px) {
+        max-width: 100%;
+        width: 100%;
+        padding: 36px 0;
+    }
+    @media (max-width: 768px) {
+        padding: 32px 0;
+    }
     &__container{
         width: 100;
         display: flex;
         flex-direction: row;
         justify-content: space-around;
         margin: 0 auto;
+        @media (max-width: 450px) {
+
+            &:before,
+            &:after {
+                content: "";
+                position: absolute;
+                top: 0;
+                bottom: 0;
+                width: 20%; /* Adjust the width as needed */
+                z-index: 1;
+            }
+
+            /* Left gradient */
+            &:before {
+                left: -10px;
+                background: linear-gradient(to left, rgba(255,255,255,0) 0%, #FFFFFF 100%);
+            }
+
+            /* Right gradient */
+            &:after {
+                right: -10px;
+                background: linear-gradient(to right, rgba(255,255,255,0) 0%, #FFFFFF 100%);
+            }
+        }
+        @media (max-width: 340px) {
+            &:before,
+            &:after {
+                display: none;
+            }
+        }
     }
     &__CTA{
         text-align: center;
@@ -39,9 +77,22 @@
         border-radius: 15px;
         cursor: pointer;
         position: relative;
-        margin: 0px 14px;
+        margin: 0px 20px;
         transition: filter 0.7s;
         filter: grayscale(0%);
+        @media (max-width: 1260px) {
+            width: 173px;
+            height: 196px;
+            margin: 0 12px;
+        }
+        @media (max-width: 768px) {
+            width: 184px;
+            height: 210px;
+        }
+        @media (max-width: 450px) {
+            width: 288px;
+            height: 312px;
+        }
         img{
             height: 100%;
             width: 100%;
@@ -99,6 +150,11 @@
         line-height: normal;
         letter-spacing: -1.26px;
         margin-bottom: 32px;
+        @media (max-width: 1020px) {
+           font-size: 22px;
+           margin-bottom: 24px;
+           font-weight: 300;
+        }
     }
     &__image{
         height: 232px;
@@ -106,6 +162,18 @@
         border-radius: 30px;
         overflow: hidden;
         position: relative;
+        @media (max-width: 1260px) {
+            width: 173px;
+            height: 173px;
+        }
+        @media (max-width: 768px) {
+            width: 184px;
+            height: 184px;
+        }
+        @media (max-width: 450px) {
+            width: 288px;
+            height: 288px;
+        }
     }
     &__terms{
         position: absolute;
