--- a/storefront-child/build_assets/scss/blocks/_product-infos.scss
+++ b/storefront-child/build_assets/scss/blocks/_product-infos.scss
@@ -46,7 +46,7 @@
             width: 37px;
             border-radius: 100%;
             height: 37px;
-            background-color: #ACBCB5;
+            background-color: $mercury;
             border: solid 5px #fff;
             position: absolute;
             display: flex;
@@ -93,6 +93,10 @@
     .ui-widget-content{
         border: none !important;
     }
+    .ui-accordion-header {
+        padding-left: 0 !important;
+        padding-right: 0 !important;
+    }
     .ui-accordion-content{
         color: #000;
         font-family: Montserrat;
@@ -101,5 +105,7 @@
         font-weight: 400;
         line-height: 20px; /* 125% */
         letter-spacing: -0.64px;
+        padding-left: 0 !important;
+        padding-right: 0 !important;
     }
 }
