--- a/storefront-child/build_assets/scss/blocks/_header.scss
+++ b/storefront-child/build_assets/scss/blocks/_header.scss
@@ -421,6 +421,11 @@
 
             .close-icon {
                cursor: pointer;
+               &:hover {
+                    rect {
+                       fill: $seaFoam;
+                    }
+               }
             }
 
             svg {
@@ -533,6 +538,21 @@
                         font-weight: 300;
                         margin-bottom: 24px;
                         display: none;
+                        a {
+                            position: relative;
+                        }
+                        &:hover {
+                            a::after {
+                                content: '';
+                                width: 100%;
+                                height: 2px;
+                                display: block;
+                                background-color: $seaFoam;
+                                position: absolute;
+                                top: 20px;
+                                border-radius: 7px;
+                            }
+                        }
 
                         &.open {
                             display: block;
