--- a/storefront-child/build_assets/scss/style.scss
+++ b/storefront-child/build_assets/scss/style.scss
@@ -8,7 +8,6 @@
 @import 'blocks/_product.scss';
 @import 'blocks/_hero.scss';
 @import 'blocks/_breadcrumb.scss';
-@import 'blocks/_featured-products.scss';
 @import 'blocks/_product-infos.scss';
 @import 'blocks/_baloon-columns.scss';
 @import 'blocks/_environment.scss';
@@ -23,7 +22,7 @@
 @import 'blocks/_404.scss';
 @import 'blocks/_cookies.scss';
 @import 'blocks/_title-paragraph.scss';
-@import 'blocks/_legal-categories.scss';
+@import 'blocks/_legal.scss';
 @import 'custom-dropdown.scss';
 @import 'blocks/global-featured-products.scss';
 @import 'blocks/checkout.scss';
@@ -53,6 +52,7 @@ p {
     margin: 0;
     line-height: 20px;
 }
+
 
 a {
     font-family: $montserrat;
